# nett-object-segmentation

./: .buildinfo  .gitignore  README.md  genindex.html  objects.inv  requirements.txt  requirements_new.txt  search.html  setup.cfg
.doctrees/: environment.pickle
.doctrees/documentation/: common.doctree  networks.doctree
.github/workflows/: docs.yml  lint.yml
_modules/: index.html  utils.html
_modules/agent/: supervised_agent.html
_modules/algorithms/: icm.html
_modules/callback/: custom_eval_callback.html
_modules/common/: base_agent.html
_modules/env_wrapper/: chickai_env_wrapper.html  observation_wrapper.html  parsing_env_wrapper.html
_modules/networks/: dino.html  resnet18.html
_sources/: index.rst.txt
_sources/documentation/: agent.rst.txt  environment.rst.txt
data/checkpoints/: README.md
data/executables/: README.md
data/runs/: README.md
docs/: custom-configuration.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/documentation/: callback.rst  index.rst
documentation/: agent.html  callback.html  index.html  networks.html
scripts/: parsing_sup.sh
src/analysis/: README.md
src/analysis/encoder_analysis/: config.yaml  embodied_models.py  visualize_encoder.py
src/analysis/r/: NETT_merge_csvs.R  NETT_test_viz.R  run_analysis.py  validate_logs.py
src/simulation/: run.py  utils.py
src/simulation/agent/: supervised_agent.py  unsupervised_agent.py
src/simulation/algorithms/: icm.py  rnd.py
src/simulation/callback/: custom_eval_callback.py  intrinsic_reward_callback.py
tests/: test_env.py
(+16 files in other folders)
