[metadata]
name = Parsing NewBornEmbodiedTuringTest
version = 0.1
description = A package to generate results for parsing benchmark 
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/yourusername/your-repo-name
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_packages()
python_requires = >=3.6
install_requires =
    stable_baselines3
    sb3_contrib
    matplotlib
    pandas
    GPUtil
    torch
    # add any additional packages that 
    # your project depends on